[gd_scene load_steps=7 format=3 uid="uid://dge4f53e5mj33"]

[ext_resource type="Script" path="res://Settings.gd" id="1_m61go"]
[ext_resource type="FontFile" uid="uid://doeucwsjnxsn5" path="res://Fonts/Minecraftia-Regular.ttf" id="2_j1e65"]
[ext_resource type="AudioStream" uid="uid://dh02am0fxnfb8" path="res://mixkit-we-own-the-night-roll-out-320.mp3" id="3_s3ar8"]

[sub_resource type="Gradient" id="Gradient_4imrt"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.129412, 0.14902, 0.247059, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_alfuj"]
gradient = SubResource("Gradient_4imrt")

[sub_resource type="TileSet" id="TileSet_ol5u0"]
tile_size = Vector2i(8, 8)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m61go")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_alfuj")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ol5u0")
format = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -110.0
offset_right = 145.5
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j1e65")
text = "Volume"

[node name="Volume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j1e65")
text = "	Mute"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j1e65")
theme_override_font_sizes/font_size = 16

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 1019.0
offset_right = 127.0
offset_bottom = 1079.0
theme_override_fonts/font = ExtResource("2_j1e65")
theme_override_font_sizes/font_size = 26
text = "Back"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s3ar8")
volume_db = 5.0

[connection signal="value_changed" from="VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
